entrega final lista 04